Imagen de warning

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="area-resultado">
                 <div id="result"></div>
                 <div id="mensaje-oculto">
+                    <img class="warning" src="public/imagenes/alert.png" alt="warning">
                     <p>Aqui no hay nada para mostrar</p>
                 </div>
                 <div id="btnCopiar">
